@@ -17,6 +17,7 @@ Changelog:
     Revert changes to SMP-N100.conf that conflict with Sony Blu-ray players and break MKV support (thanks, mrw1986)
     PMS.conf:
         - Added transcode_folder_name option to allow #--TRANSCODE--# folder name to be customized (issue GC963)
+    Replaced ImageMagick with Thumbnailator for thumbnail generation
 
 1.60.0 - 2012-07-17
 
